# keen

./: CMakeLists.txt  pom.xml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  keen.cpp
src/device/: CMakeLists.txt  device.cpp
src/device/gpu/: gpu.cpp
src/device/include/device/: device.h  deviceinfo.h
src/device/include/device/gpu/: gpu.h
src/kernel/: CMakeLists.txt  model.cpp
src/kernel/camera/: camera.cpp
src/kernel/driver/vulkan/: application.cpp  device.cpp  extension.cpp  validation.cpp
src/kernel/include/kernel/: model.h  types.h
src/kernel/include/kernel/camera/: camera.h
src/kernel/include/kernel/driver/vulkan/: application.h  device.h  extension.h  validation.h
src/main/java/com/keenjackdaw/keen/core/app/: Application.java
src/main/java/com/keenjackdaw/keen/core/framework/: BaseApplication.java  BaseLauncher.java
src/main/java/com/keenjackdaw/keen/core/launcher/: Launcher.java
src/main/java/com/keenjackdaw/keen/core/log/: logger.java
src/main/java/com/keenjackdaw/keen/launcher/: ConsoleLauncher.java
src/main/java/com/keenjackdaw/keen/type/: AppType.java
src/math/: CMakeLists.txt  vec3.cpp
src/math/include/math/linear/: vec3.h
test/: CMakeLists.txt
test/testTriangle/: CMakeLists.txt  HelloTriangleApplication.cpp  testTriangle.cpp
test/testTriangle/include/: HelloTriangleApplication.h
test/testTriangle/shaders/: frag.glsl  vert.glsl
